--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,24 +45,30 @@
                         android:layout_width="0dp"
                         android:layout_columnWeight="1"
                         android:layout_rowWeight="1"
-                        android:layout_marginBottom="16dp"
-                        android:layout_marginLeft="16dp"
-                        android:layout_marginRight="16dp"
+                        android:layout_marginLeft="6dp"
+                        android:layout_marginRight="0dp"
                         app:cardElevation="8dp"
                         app:cardCornerRadius="6dp"
                         >
-                        
-                        <LinearLayout
+
+                        <RelativeLayout
                             android:layout_gravity="center_horizontal|center_vertical"
                             android:orientation="vertical"
-                            android:layout_margin="16dp"
+                            android:layout_margin="6dp"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content">
 
 
+                            <ImageView
+                                android:id="@+id/fractureicon"
+                                android:layout_width="100dp"
+                                android:layout_height="80dp"
+                                android:src="@drawable/fractureicon" />
+
                             <TextView
+                                android:layout_below="@+id/fractureicon"
+                                android:layout_centerHorizontal="true"
                                 android:text="Fractures"
-                                android:textAlignment="center"
                                 android:textColor="@color/colorPrimaryDark"
                                 android:textSize="18sp"
                                 android:textStyle="bold"
@@ -70,8 +76,7 @@
                                 android:layout_height="wrap_content" />
 
 
-
-                        </LinearLayout>
+                        </RelativeLayout>
 
                     </android.support.v7.widget.CardView>
                     <!-- Row 1 -->
@@ -82,24 +87,31 @@
                         android:layout_width="0dp"
                         android:layout_columnWeight="1"
                         android:layout_rowWeight="1"
-                        android:layout_marginBottom="16dp"
-                        android:layout_marginLeft="16dp"
-                        android:layout_marginRight="16dp"
+                        android:layout_marginLeft="6dp"
+                        android:layout_marginRight="6dp"
                         app:cardElevation="8dp"
                         app:cardCornerRadius="6dp"
                         >
                         <!-- Row 1 -->
                         <!-- Column 2 -->
-                        <LinearLayout
+                        <RelativeLayout
                             android:layout_gravity="center_horizontal|center_vertical"
                             android:orientation="vertical"
-                            android:layout_margin="16dp"
+                            android:layout_margin="6dp"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content">
 
+
+                            <ImageView
+                                android:id="@+id/burnicon"
+                                android:layout_width="100dp"
+                                android:layout_height="80dp"
+                                android:src="@drawable/burnicon" />
+
                             <TextView
+                                android:layout_below="@+id/burnicon"
+                                android:layout_centerHorizontal="true"
                                 android:text="Burns"
-                                android:textAlignment="center"
                                 android:textColor="@color/colorPrimaryDark"
                                 android:textSize="18sp"
                                 android:textStyle="bold"
@@ -107,7 +119,7 @@
                                 android:layout_height="wrap_content" />
 
 
-                        </LinearLayout>
+                        </RelativeLayout>
 
                     </android.support.v7.widget.CardView>
 
@@ -119,23 +131,31 @@
                         android:layout_columnWeight="1"
                         android:onClick="openCutActivity"
                         android:layout_rowWeight="1"
-                        android:layout_marginBottom="16dp"
-                        android:layout_marginLeft="16dp"
-                        android:layout_marginRight="16dp"
+                        android:layout_marginTop="6dp"
+                        android:layout_marginLeft="6dp"
+                        android:layout_marginRight="0dp"
                         app:cardElevation="8dp"
                         app:cardCornerRadius="6dp"
                         >
 
-                        <LinearLayout
+                        <RelativeLayout
                             android:layout_gravity="center_horizontal|center_vertical"
                             android:orientation="vertical"
-                            android:layout_margin="16dp"
+                            android:layout_margin="6dp"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content">
 
+
+                            <ImageView
+                                android:id="@+id/cutsicon"
+                                android:layout_width="100dp"
+                                android:layout_height="80dp"
+                                android:src="@drawable/cuticon" />
+
                             <TextView
+                                android:layout_below="@+id/cutsicon"
+                                android:layout_centerHorizontal="true"
                                 android:text="Cuts"
-                                android:textAlignment="center"
                                 android:textColor="@color/colorPrimaryDark"
                                 android:textSize="18sp"
                                 android:textStyle="bold"
@@ -143,7 +163,7 @@
                                 android:layout_height="wrap_content" />
 
 
-                        </LinearLayout>
+                        </RelativeLayout>
 
                     </android.support.v7.widget.CardView>
 
@@ -155,23 +175,31 @@
                         android:layout_columnWeight="1"
                         android:layout_rowWeight="1"
                         android:onClick="openScrapesActivity"
-                        android:layout_marginBottom="16dp"
-                        android:layout_marginLeft="16dp"
-                        android:layout_marginRight="16dp"
+                        android:layout_marginTop="6dp"
+                        android:layout_marginLeft="6dp"
+                        android:layout_marginRight="6dp"
                         app:cardElevation="8dp"
                         app:cardCornerRadius="6dp"
                         >
 
-                        <LinearLayout
+                        <RelativeLayout
                             android:layout_gravity="center_horizontal|center_vertical"
                             android:orientation="vertical"
-                            android:layout_margin="16dp"
+                            android:layout_margin="6dp"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content">
-                            
+
+
+                            <ImageView
+                                android:id="@+id/scrapesicon"
+                                android:layout_width="100dp"
+                                android:layout_height="80dp"
+                                android:src="@drawable/scrapesicon" />
+
                             <TextView
+                                android:layout_below="@+id/scrapesicon"
+                                android:layout_centerHorizontal="true"
                                 android:text="Scrapes"
-                                android:textAlignment="center"
                                 android:textColor="@color/colorPrimaryDark"
                                 android:textSize="18sp"
                                 android:textStyle="bold"
@@ -179,7 +207,7 @@
                                 android:layout_height="wrap_content" />
 
 
-                        </LinearLayout>
+                        </RelativeLayout>
 
                     </android.support.v7.widget.CardView>
 
@@ -190,24 +218,32 @@
                         android:layout_width="0dp"
                         android:layout_columnWeight="1"
                         android:layout_rowWeight="1"
-                        android:layout_marginBottom="16dp"
+                        android:layout_marginTop="6dp"
                         android:onClick="openPuncturesActivity"
-                        android:layout_marginLeft="16dp"
-                        android:layout_marginRight="16dp"
+                        android:layout_marginLeft="6dp"
+                        android:layout_marginRight="0dp"
                         app:cardElevation="8dp"
                         app:cardCornerRadius="6dp"
                         >
 
-                        <LinearLayout
+                        <RelativeLayout
                             android:layout_gravity="center_horizontal|center_vertical"
                             android:orientation="vertical"
-                            android:layout_margin="16dp"
+                            android:layout_margin="6dp"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content">
 
+
+                            <ImageView
+                                android:id="@+id/punctureicon"
+                                android:layout_width="100dp"
+                                android:layout_height="80dp"
+                                android:src="@drawable/punctureicon" />
+
                             <TextView
+                                android:layout_below="@+id/punctureicon"
+                                android:layout_centerHorizontal="true"
                                 android:text="Punctures"
-                                android:textAlignment="center"
                                 android:textColor="@color/colorPrimaryDark"
                                 android:textSize="18sp"
                                 android:textStyle="bold"
@@ -215,7 +251,7 @@
                                 android:layout_height="wrap_content" />
 
 
-                        </LinearLayout>
+                        </RelativeLayout>
 
                     </android.support.v7.widget.CardView>
 
@@ -227,23 +263,31 @@
                         android:layout_columnWeight="1"
                         android:layout_rowWeight="1"
                         android:onClick="openSplintersActivity"
-                        android:layout_marginBottom="16dp"
-                        android:layout_marginLeft="16dp"
-                        android:layout_marginRight="16dp"
+                        android:layout_marginTop="6dp"
+                        android:layout_marginLeft="6dp"
+                        android:layout_marginRight="6dp"
                         app:cardElevation="8dp"
                         app:cardCornerRadius="6dp"
                         >
 
-                        <LinearLayout
+                        <RelativeLayout
                             android:layout_gravity="center_horizontal|center_vertical"
                             android:orientation="vertical"
-                            android:layout_margin="16dp"
+                            android:layout_margin="6dp"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content">
 
+
+                            <ImageView
+                                android:id="@+id/splintericon"
+                                android:layout_width="100dp"
+                                android:layout_height="80dp"
+                                android:src="@drawable/splintersicon" />
+
                             <TextView
+                                android:layout_below="@+id/splintericon"
+                                android:layout_centerHorizontal="true"
                                 android:text="Splinters"
-                                android:textAlignment="center"
                                 android:textColor="@color/colorPrimaryDark"
                                 android:textSize="18sp"
                                 android:textStyle="bold"
@@ -251,7 +295,7 @@
                                 android:layout_height="wrap_content" />
 
 
-                        </LinearLayout>
+                        </RelativeLayout>
 
                     </android.support.v7.widget.CardView>
 
@@ -263,23 +307,31 @@
                         android:layout_columnWeight="1"
                         android:layout_rowWeight="1"
                         android:onClick="openCPRActivity"
-                        android:layout_marginBottom="16dp"
-                        android:layout_marginLeft="16dp"
-                        android:layout_marginRight="16dp"
+                        android:layout_marginTop="6dp"
+                        android:layout_marginLeft="6dp"
+                        android:layout_marginRight="0dp"
                         app:cardElevation="8dp"
                         app:cardCornerRadius="6dp"
                         >
 
-                        <LinearLayout
+                        <RelativeLayout
                             android:layout_gravity="center_horizontal|center_vertical"
                             android:orientation="vertical"
-                            android:layout_margin="16dp"
+                            android:layout_margin="6dp"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content">
 
+
+                            <ImageView
+                                android:id="@+id/cpricon"
+                                android:layout_width="100dp"
+                                android:layout_height="80dp"
+                                android:src="@drawable/cpricon" />
+
                             <TextView
-                                android:text="Cpr"
-                                android:textAlignment="center"
+                                android:layout_below="@+id/cpricon"
+                                android:layout_centerHorizontal="true"
+                                android:text="CPR"
                                 android:textColor="@color/colorPrimaryDark"
                                 android:textSize="18sp"
                                 android:textStyle="bold"
@@ -287,7 +339,7 @@
                                 android:layout_height="wrap_content" />
 
 
-                        </LinearLayout>
+                        </RelativeLayout>
 
                     </android.support.v7.widget.CardView>
 
@@ -298,24 +350,32 @@
                         android:layout_width="0dp"
                         android:layout_columnWeight="1"
                         android:layout_rowWeight="1"
-                        android:layout_marginBottom="16dp"
+                        android:layout_marginTop="6dp"
                         android:onClick="openFluActivity"
-                        android:layout_marginLeft="16dp"
-                        android:layout_marginRight="16dp"
+                        android:layout_marginLeft="6dp"
+                        android:layout_marginRight="6dp"
                         app:cardElevation="8dp"
                         app:cardCornerRadius="6dp"
                         >
 
-                        <LinearLayout
+                        <RelativeLayout
                             android:layout_gravity="center_horizontal|center_vertical"
                             android:orientation="vertical"
-                            android:layout_margin="16dp"
+                            android:layout_margin="6dp"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content">
 
+
+                            <ImageView
+                                android:id="@+id/sicknessicon"
+                                android:layout_width="100dp"
+                                android:layout_height="80dp"
+                                android:src="@drawable/sicknessicon" />
+
                             <TextView
-                                android:text="Flu"
-                                android:textAlignment="center"
+                                android:layout_below="@+id/sicknessicon"
+                                android:layout_centerHorizontal="true"
+                                android:text="Fractures"
                                 android:textColor="@color/colorPrimaryDark"
                                 android:textSize="18sp"
                                 android:textStyle="bold"
@@ -323,7 +383,7 @@
                                 android:layout_height="wrap_content" />
 
 
-                        </LinearLayout>
+                        </RelativeLayout>
 
                     </android.support.v7.widget.CardView>
 
