--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,13 +29,13 @@
 
                 <GridLayout
                     android:columnCount="2"
-                    android:columnOrderPreserved="false"
+                    android:columnOrderPreserved="true"
                     android:rowCount="4"
                     android:alignmentMode="alignMargins"
                     android:layout_weight="7"
                     android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:padding="12dp">
+                    android:layout_height="wrap_content"
+                    android:padding="8dp">
 
                     <!-- Row 1 -->
                     <!-- Column 1 -->
@@ -48,8 +48,7 @@
                         android:layout_marginLeft="6dp"
                         android:layout_marginRight="0dp"
                         app:cardElevation="8dp"
-                        app:cardCornerRadius="6dp"
-                        >
+                        app:cardCornerRadius="6dp">
 
                         <RelativeLayout
                             android:layout_gravity="center_horizontal|center_vertical"
@@ -76,6 +75,7 @@
                                 android:layout_height="wrap_content" />
 
 
+
                         </RelativeLayout>
 
                     </android.support.v7.widget.CardView>
@@ -87,7 +87,7 @@
                         android:layout_width="0dp"
                         android:layout_columnWeight="1"
                         android:layout_rowWeight="1"
-                        android:layout_marginLeft="6dp"
+                        android:layout_marginLeft="7dp"
                         android:layout_marginRight="6dp"
                         app:cardElevation="8dp"
                         app:cardCornerRadius="6dp"
@@ -117,6 +117,7 @@
                                 android:textStyle="bold"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content" />
+
 
 
                         </RelativeLayout>
@@ -163,6 +164,7 @@
                                 android:layout_height="wrap_content" />
 
 
+
                         </RelativeLayout>
 
                     </android.support.v7.widget.CardView>
@@ -176,7 +178,7 @@
                         android:layout_rowWeight="1"
                         android:onClick="openScrapesActivity"
                         android:layout_marginTop="6dp"
-                        android:layout_marginLeft="6dp"
+                        android:layout_marginLeft="7dp"
                         android:layout_marginRight="6dp"
                         app:cardElevation="8dp"
                         app:cardCornerRadius="6dp"
@@ -264,7 +266,7 @@
                         android:layout_rowWeight="1"
                         android:onClick="openSplintersActivity"
                         android:layout_marginTop="6dp"
-                        android:layout_marginLeft="6dp"
+                        android:layout_marginLeft="7dp"
                         android:layout_marginRight="6dp"
                         app:cardElevation="8dp"
                         app:cardCornerRadius="6dp"
@@ -352,7 +354,7 @@
                         android:layout_rowWeight="1"
                         android:layout_marginTop="6dp"
                         android:onClick="openFluActivity"
-                        android:layout_marginLeft="6dp"
+                        android:layout_marginLeft="7dp"
                         android:layout_marginRight="6dp"
                         app:cardElevation="8dp"
                         app:cardCornerRadius="6dp"
